com logout
